--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="ng-free-zen - your description here">
   <title>ng-free-zen</title>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
@@ -22,7 +23,7 @@
     </div>
     <nav class="header__nav">
       <ul class="header__list">
-        <li class="header__item"><a href="#" class="header__link">Download</a></li>
+        <li class="header__item"><a href="#download" class="header__link">Download</a></li>
         <li class="header__item"><a href="#" class="header__link">Warranty</a></li>
         <li class="header__item"><a href="#" class="header__link">Care</a></li>
         <li class="header__item"><a href="#" class="header__link">Cashback</a></li>
@@ -48,8 +49,31 @@
     </nav>
   </header>
 
-  <main class="main">
-    <section></section>
+  <main class="main container light ">
+    <section class="download " id="download">
+      <div class="download__wrapper">
+        <div class="download__text-block">
+          <h2 class="download__title">Peaceful shopping mindful money</h2>
+          <p class="download__copy">See how we can help with making your shopping experience and money management more
+            ZEN.</p>
+          <div class="download__links">
+            <a class="download__link" href="https://www.apple.com/">
+              <img src="./asset/icon/btn-apple.svg"
+               alt="apple icon">
+            </a>
+            <a class="download__link" href="https://www.google.com/">
+              <img src="./asset/icon/btn-google.svg"
+               alt="google icon">
+            </a>
+          </div>
+        </div>
+        <div class="download__image-block">
+          <img src="./asset/images/image 1.jpg"
+          alt="Bag and devices">
+        </div>
+      </div>
+
+    </section>
     <section></section>
     <section></section>
     <section></section>
