The site section 2 layout is complete

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+
   <header class="header container light">
     <div class="header__logo">
       <img class="header__logo--light" src="./asset/icon/logo_light.svg" alt="Company logo" width="100" height="40">
@@ -50,6 +51,7 @@
   </header>
 
   <main class="main container light ">
+
     <section class="download " id="download">
       <div class="download__wrapper">
         <div class="download__text-block">
@@ -72,9 +74,21 @@
           alt="Bag and devices">
         </div>
       </div>
-
     </section>
-    <section></section>
+
+    <section class="warranty" id="warranty">
+      <div class="warranty__wrapper">
+        <div class="warranty__text-block">
+          <h2 class="warranty__title">1-year warranty boost</h2>
+          <p class="warranty__copy">ZEN cards have a very neat feature that will help you whenever your electronic devices start failing after the standard warranty ends, which is pretty common.</p>
+          <p class="warranty__copy">When you buy any electronics with your ZEN shopping Mastercard, their warranty gets extended by one year. How does it work? It simply does. Automatically.</p>
+        </div>
+        <div class="warranty__image-block">
+          <img src="./asset/images/image 2.jpg"
+          alt="Shopping basket">
+        </div>
+      </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
