The site section 3 layout is complete

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <nav class="header__nav">
       <ul class="header__list">
         <li class="header__item"><a href="#download" class="header__link">Download</a></li>
-        <li class="header__item"><a href="#" class="header__link">Warranty</a></li>
-        <li class="header__item"><a href="#" class="header__link">Care</a></li>
-        <li class="header__item"><a href="#" class="header__link">Cashback</a></li>
-        <li class="header__item"><a href="#" class="header__link">Clients</a></li>
+        <li class="header__item"><a href="#warranty" class="header__link">Warranty</a></li>
+        <li class="header__item"><a href="#care" class="header__link">Care</a></li>
+        <li class="header__item"><a href="#cashback" class="header__link">Cashback</a></li>
+        <li class="header__item"><a href="#clients" class="header__link">Clients</a></li>
       </ul>
       <button class="header__lang--btn" aria-label="Change language">EN<span>
           <svg xmlns="http://www.w3.org/2000/svg" width="9" height="6" viewBox="0 0 9 6" fill="none">
@@ -89,12 +89,29 @@
         </div>
       </div>
     </section>
+
+    <section class="care" id="care">
+      <div class="care__wrapper">
+        <div class="care__text-block">
+          <h2 class="care__title">ZEN Care</h2>
+          <p class="care__copy">Shopping online is usually a delightful experience. Until it's not.</p>
+          <p class="care__copy">Until something you buy, proves to be faulty, missing or a totally wrong item, you’re in for long product return procedures.</p>
+          <p class="care__copy">But, here comes ZEN Care: a free, built-in shopping protection.</p>
+        </div>
+        <div class="care__image-block">
+          <img src="./asset/images/image 3.jpg"
+          alt="Shopping basket">
+        </div>
+      </div>
+    </section>
+
     <section></section>
     <section></section>
-    <section></section>
+
   </main>
 
   <footer class="footer" role="contentinfo"> </footer>
+  
   <script src="./scripts/script.js" defer></script>
 </body>
 
