--- a/index.html
+++ b/index.html
@@ -60,18 +60,15 @@
             ZEN.</p>
           <div class="download__links">
             <a class="download__link" href="https://www.apple.com/">
-              <img src="./asset/icon/btn-apple.svg"
-               alt="apple icon">
+              <img src="./asset/icon/btn-apple.svg" alt="apple icon">
             </a>
             <a class="download__link" href="https://www.google.com/">
-              <img src="./asset/icon/btn-google.svg"
-               alt="google icon">
+              <img src="./asset/icon/btn-google.svg" alt="google icon">
             </a>
           </div>
         </div>
         <div class="download__image-block">
-          <img src="./asset/images/image 1.jpg"
-          alt="Bag and devices">
+          <img src="./asset/images/image 1.jpg" alt="Bag and devices">
         </div>
       </div>
     </section>
@@ -80,12 +77,13 @@
       <div class="warranty__wrapper">
         <div class="warranty__text-block">
           <h2 class="warranty__title">1-year warranty boost</h2>
-          <p class="warranty__copy">ZEN cards have a very neat feature that will help you whenever your electronic devices start failing after the standard warranty ends, which is pretty common.</p>
-          <p class="warranty__copy">When you buy any electronics with your ZEN shopping Mastercard, their warranty gets extended by one year. How does it work? It simply does. Automatically.</p>
+          <p class="warranty__copy">ZEN cards have a very neat feature that will help you whenever your electronic
+            devices start failing after the standard warranty ends, which is pretty common.</p>
+          <p class="warranty__copy">When you buy any electronics with your ZEN shopping Mastercard, their warranty gets
+            extended by one year. How does it work? It simply does. Automatically.</p>
         </div>
         <div class="warranty__image-block">
-          <img src="./asset/images/image 2.jpg"
-          alt="Shopping basket">
+          <img src="./asset/images/image 2.jpg" alt="Shopping basket">
         </div>
       </div>
     </section>
@@ -95,23 +93,34 @@
         <div class="care__text-block">
           <h2 class="care__title">ZEN Care</h2>
           <p class="care__copy">Shopping online is usually a delightful experience. Until it's not.</p>
-          <p class="care__copy">Until something you buy, proves to be faulty, missing or a totally wrong item, you’re in for long product return procedures.</p>
+          <p class="care__copy">Until something you buy, proves to be faulty, missing or a totally wrong item, you’re in
+            for long product return procedures.</p>
           <p class="care__copy">But, here comes ZEN Care: a free, built-in shopping protection.</p>
         </div>
         <div class="care__image-block">
-          <img src="./asset/images/image 3.jpg"
-          alt="Shopping basket">
+          <img src="./asset/images/image 3.jpg" alt="Credit card">
         </div>
       </div>
     </section>
 
-    <section></section>
+    <section class="cashback" id="cashback">
+      <div class="cashback__wrapper">
+        <div class="cashback__text-block">
+          <h2 class="cashback__title">and cashback!</h2>
+          <p class="cashback__copy">It saves a little bit of money while you’re shopping, but in many cases it takes ages to get anything out of it.</p>
+          <p class="cashback__copy">We gave it a thought and made cashback way more friendly.</p>
+          <p class="cashback__copy">Up to 14% of what you spend using ZEN Mastercard ® will materialize on your account right after the purchase.</p>
+        </div>
+        <button class="cashback__btn">Order a consultation</button>
+      </div>
+    </section>
+
     <section></section>
 
   </main>
 
-  <footer class="footer" role="contentinfo"> </footer>
-  
+  <footer class="footer" role="contentinfo"></footer>
+
   <script src="./scripts/script.js" defer></script>
 </body>
 
