The site section 5 layout is complete

--- a/index.html
+++ b/index.html
@@ -115,7 +115,60 @@
       </div>
     </section>
 
-    <section></section>
+    <section class="clients" id="clients">
+      <div class="clients__wrapper">
+        <div class="clients__images">
+          <div class="clients__item clients__item--light">
+            <img src="./asset/icon/ROSEGAL.svg" alt="ROSEGAL icon">
+          </div>
+          <div class="clients__item clients__item--dark" style="display: none;">
+            <img src="./asset/icon/ROSEGAL-dark.svg" alt="ROSEGAL icon">
+          </div>
+          <div class="clients__item clients__item--light">
+            <img src="./asset/icon/Gearbest.svg" alt="Gearbest icon">
+          </div>
+          <div class="clients__item clients__item--dark" style="display: none;">
+            <img src="./asset/icon/Gearbest-dark.svg" alt="Gearbest">
+          </div>
+          <div class="clients__item clients__item--light">
+            <img src="./asset/icon/allegro.svg" alt="Allegro icon">
+          </div>
+          <div class="clients__item clients__item--dark" style="display: none;">
+            <img src="./asset/icon/allegro-dark.svg" alt="Allegro icon">
+          </div>
+          <div class="clients__item clients__item--light">
+            <img src="./asset/icon/AliExpress.svg" alt="AliExpress icon">
+          </div>
+          <div class="clients__item clients__item--dark" style="display: none;">
+            <img src="./asset/icon/AliExpress-dark.svg" alt="AliExpress icon">
+          </div>
+          <div class="clients__item clients__item--light">
+            <img src="./asset/icon/Booking.svg" alt="Booking icon">
+          </div>
+          <div class="clients__item clients__item--dark" style="display: none;">
+            <img src="./asset/icon/Booking-dark.svg" alt="Booking icon">
+          </div>
+          <div class="clients__item clients__item--light">
+            <img src="./asset/icon/MediaMarkt.svg" alt="MediaMarkt icon">
+          </div>
+          <div class="clients__item clients__item--dark" style="display: none;">
+            <img src="./asset/icon/MediaMarkt-dark.svg" alt="MediaMarkt icon">
+          </div>
+          <div class="clients__item clients__item--light">
+            <img src="./asset/icon/RTVeuroAGD.svg" alt="RTVeuroAGD icon">
+          </div>
+          <div class="clients__item clients__item--dark" style="display: none;">
+            <img src="./asset/icon/RTVeuroAGD-dark.svg" alt="RTVeuroAGD icon">
+          </div>
+          <div class="clients__item clients__item--light">
+            <img src="./asset/icon/GROUPON.svg" alt="GROUPON icon">
+          </div>
+          <div class="clients__item clients__item--dark" style="display: none;">
+            <img src="./asset/icon/GROUPON-dark.svg" alt="GROUPON icon">
+          </div>
+        </div>
+      </div>
+    </section>
 
   </main>
 
